Modified TestGym.